--- a/63124c5d77ef40dfa8e97385ce287ce1.opf/meta.yml
+++ b/63124c5d77ef40dfa8e97385ce287ce1.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     d493a99c64744315b8aa5fc9b7e51fc9:
       base_file: v026.txt
       image_group_id: I1PD95871
-      title: ''
+      title: མན་ངག་སྐུའི་སྒྲོན་མ།
       total_pages: 1902
       volume_number: 26
